--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "1"
+version: "3.3"
 services:
   postgres:
     image: postgres:10.5
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: dbuser
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: brewers
-  sn-scores:
+  sn-brewers:
     image: denisvitez/rso-brewers:latest
     ports:
       - 8080:8080
