Changes, will try Travis build.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,20 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: brewers
   sn-brewers:
-    image: denisvitez/rso-brewers:latest
+    image: denisvitez/rso-brewers:10
     ports:
       - 5100:5100
+    environment:
+      KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://postgres:5432/brewers
+      KUMULUZEE_CONFIG_ETCD_HOSTS: http://etcd:2379
+      KUMULUZEE_DISCOVERY_ETCD_HOSTS: http://etcd:2379
+    depends_on:
+      - postgres
+      - etcd
+  sn-beers:
+    image: denisvitez/rso-beers:11
+    ports:
+      - 5101:5101
     environment:
       KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://postgres:5432/brewers
       KUMULUZEE_CONFIG_ETCD_HOSTS: http://etcd:2379
